2015-12-21 - 1.1.4:
 - Bump to Mesos 0.26.0-0.2.145.ubuntu1404

2015-12-16 - 1.1.3:
 - Bump to Mesos 0.25.0-0.2.70.ubuntu1404

2015-11-23 - 1.1.2:
 - Bump to use ubuntu-base:1.0.2

2015-11-07 - 1.1.1:
 - Using new ubuntu-base image to include logrotate support

2015-10-23 - 1.1.0:
 - Bump to Mesos 0.24.1-0.2.35.ubuntu1404

2015-10-16 - 1.0.2:
  - Bump to Mesos 0.23.1-0.2.61.ubuntu1404
  - Pin zookeeper

2015-10-07 - 1.0.1:
  - Updated to use Oracle java 8. 