@@ -1,13 +1,13 @@
 ################################################################################
-# mesos-base:1.1.4
-# Date: 12/21/2015
+# mesos-base:1.2.0
+# Date: 1/21/2016
 # Mesos Version: 0.26.0-0.2.145.ubuntu1404
 #
 # Description:
 # Base build for mesos related containers.
 ################################################################################
 
-FROM mrbobbytables/ubuntu-base:1.0.2
+FROM mrbobbytables/ubuntu-base:1.1.0
 MAINTAINER Bob Killen / killen.bob@gmail.com / @mrbobbytables
 
 
