@@ -4,7 +4,7 @@ Base container for all services that require Mesos related depenendancies. Mesos
 
 ##### Version Information:
 
-* **Container Release:** 1.1.4
+* **Container Release:** 1.2.0
 * **Mesos:** 0.26.0-0.2.145.ubuntu1404
 * **Mesos Documentation:** [mesos@d3717e5](https://github.com/apache/mesos/tree/d3717e5c4d1bf4fca5c41cd7ea54fae489028faa/docs)
 
